[package]
name = "antikythera-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
indexmap = "2.0.0"
thiserror = "1.0.21"
#chumsky = "1.0.0-alpha.4"
nom = "7.1.3"
num-traits = "0.2"